--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
             <div class="result__line">0</div>
         </div>
         <div class="buttons">
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <div class="zero"></div>
+            <button class="rest" id="ac">AC</button>
+            <button class="rest" id="del">Del</button>
+            <button class="rest" id="square">√</button>
+            <button class="operands" id="division">÷</button>
+            <button class="numbers" id="one">1</button>
+            <button class="numbers" id="two">2</button>
+            <button class="numbers" id="three">3</button>
+            <button class="operands" id="cross">x</button>
+            <button class="numbers" id="four">4</button>
+            <button class="numbers" id="five">5</button>
+            <button class="numbers" id="six">6</button>
+            <button class="operands" id="minus">-</button>
+            <button class="numbers" id="seven">7</button>
+            <button class="numbers" id="eight">8</button>
+            <button class="numbers" id="nine">9</button>
+            <button class="operands" id="plus">+</button>
+        </div>
+        <div class="low-buttons">
+            <div class="zero numbers" id="zero"><p>0</p></div>
+            <button class="numbers" id="point">,</button>
+            <button class="operands" id="equals">=</button>
         </div>
     </div>
 </body>
